--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,42 @@
-/* Created by: Mr. Coxall
+/* Created by: Olivia B-R
 * Created on: Sep 2020
 * This file contains the CSS for index.html
 */
+.mdl-layout__header-row {
+  justify-content: center;
+  padding: 0;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+.mdl-textfield__error {
+  color: lightgreen;
+}
+
+.page-content {
+  color: white;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.25rem;
+}
+
+.page-content-answer {
+  color: rgb(0 0 0);
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.25rem;
+}
+
+img {
+  height: 700px;
+  width: auto px;
+  float: right;
+  margin-bottom: 250px;
+  margin-right: 250px;
+}
+
+body {
+  background-color: rgb(196, 100, 237);
+}
