--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@
 }
 
 img {
-  height: 700px;
-  width: auto px;
+  height: auto px;
+  width: 100px;
   float: right;
   margin-bottom: 250px;
   margin-right: 250px;
